<resources>
    <string name="app_name">StudyDesk</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_student_main">StudentMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="default_web_client_id1" translatable="false">643435721120-hetb2usprtlll4ck8lhd0jrjtv91qqt2.apps.googleusercontent.com</string>


    <string name="menu_home">Home</string>
    <string name="menu_dashboard">DashBoard</string>
    <string name="menu_slideshow">TODO</string>
    <string name="username">Username<font color='#000000'>*</font></string>
    <string name="password">Password<font color='#000000'>*</font></string>
    <string name="email">Email<font color='#000000'>*</font></string>
    <string name="signin">Already have a account?<font color='#3CA6DA'> Sign in</font></string>
    <string name="dontHavbtn">Don\'t have an account yet?<font color='#3CA6DA'> Sign Up.</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ass_name">Assignment Name<font color='#FE4954'>*</font></string>
    <string name="descripton">Description<font color='#FE4954'>*</font></string>
    <string name="class_code">Classroom code<font color='#FE4954'>*</font></string>
    <string name="duedate">Due Date<font color='#FE4954'>*</font></string>
    <string name="duetime">Due Time<font color='#FE4954'>*</font></string>

    <string name="test_name">Test Name<font color='#FE4954'>*</font></string>


</resources>