<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.killerinstinct.studydesk.ui.student.drawer.home.StudentHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_student_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.killerinstinct.studydesk.ui.student.drawer.dashboard.StudentDashBoardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_student_dashboard" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.killerinstinct.studydesk.ui.student.drawer.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>