<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_bg"
    tools:context=".ui.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27.57dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_marginStart="28dp"
                android:src="@drawable/ic_baseline_person_add_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Signup"
                android:textColor="@color/black"
                android:textSize="26dp"
                android:fontFamily="@font/nunito_bold" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="19dp"
            android:text="@string/username"
            android:textColor="@color/text_blue"
            android:textSize="16dp"
            android:fontFamily="@font/nunito" />

        <EditText
            android:id="@+id/su_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/background"
            android:ems="10"
            android:fontFamily="@font/nunito"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:gravity="center_vertical"
            android:hint="Enter Username"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:paddingRight="10dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="19dp"
            android:text="@string/email"
            android:textColor="@color/text_blue"
            android:textSize="16dp"
            android:fontFamily="@font/nunito" />

        <EditText
            android:id="@+id/su_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/background"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="Enter Email"

            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/black"
            android:textSize="17dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="19dp"
            android:text="@string/password"
            android:textColor="@color/text_blue"
            android:textSize="16dp"
            android:fontFamily="@font/nunito" />

        <EditText
            android:id="@+id/su_Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/background"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="Enter password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:fontFamily="@font/nunito"
            android:textColor="@color/black"
            android:textSize="17dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <RadioGroup
                android:id="@+id/radioGrp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="28dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="100"
                android:layout_marginEnd="28dp">

                <RadioButton
                    android:layout_weight="50"
                    android:id="@+id/radioButtonstudent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/text_blue"
                    android:text="Student"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunito_semibold"
                    android:textSize="16dp" />

                <RadioButton
                    android:layout_weight="50"
                    android:id="@+id/radioButtontutor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/text_blue"
                    android:text="Tutor"
                    android:textColor="@color/black"
                    android:fontFamily="@font/nunito_semibold"
                    android:textSize="16dp" />
            </RadioGroup>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/info_save"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="23.83dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="23.83dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/background_solid"
            android:gravity="center"
            android:paddingStart="120dp"
            android:paddingEnd="120dp"
            android:text="Signup"
            android:fontFamily="@font/nunito_bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="26dp"
            android:orientation="horizontal">
            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:foreground="@color/med_grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/grey"
                android:fontFamily="@font/nunito"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:foreground="@color/med_grey"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/googleSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:textSize="18dp"
            android:paddingStart="15dp"
            android:drawableStart="@drawable/googleimg"
            android:fontFamily="@font/nunito_semibold"
            android:textColor="@color/text_blue"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            android:textAlignment="center"
            android:background="@drawable/background"
            android:text="Signup with Google"
            />



    </LinearLayout>





</ScrollView>